AC_INIT(emtooth, 0.0.0, pespin.shar@gmail.com)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.in)

AM_INIT_AUTOMAKE(1.6 dist-bzip2)
AM_CONFIG_HEADER(config.h)

AC_C_BIGENDIAN
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_CONST

PKG_CHECK_MODULES([ELEMENTARY], elementary)
PKG_CHECK_MODULES([EINA], eina-0)
PKG_CHECK_MODULES([DBUS], dbus-1)
PKG_CHECK_MODULES([EDBUS], edbus)


AC_OUTPUT(Makefile)
